--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_login_firebase">LoginFirebase</string>
     <string name="title_activity_registro">Registro</string>
     <string name="title_activity_principal">Principal</string>
+    <string name="title_activity_pantalla_login">PantallaLogin</string>
 </resources>
